[package]
name = "tracker-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-ws = "0.2.5"
tokio = { version = "1.35", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
rand = "0.8"
# Added UUID so we can generate dynamic consumer groups!
uuid = { version = "1.8", features = ["v4"] }